# swe-coursework

./: .gitignore
P1/: CMakeLists.txt
P1/sortAndShuffle/: .gitignore  main.c  sortAndShuffle.c
P2/: CMakeLists.txt
P2/source code/: task.h
P3/: README.md  kanban.c
P4/: CMakeLists.txt  stock_analysis.c
gantt-chart/: README.md
gantt-chart/source code/: gantChart.c  main.c  userInput.c
kanban/: CMakeLists.txt  edit.c  kanban.h  kanban.txt  main.c
sortAndShuffle/: CMakeLists.txt  sortAndShuffle.h
